--- a/src/main/res/layout/activity_credit_debit_card_flow.xml
+++ b/src/main/res/layout/activity_credit_debit_card_flow.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
     android:orientation="vertical"
     tools:context="id.co.veritrans.sdk.activities.CreditDebitCardFlowActivity">
 
