--- a/src/main/res/layout/dialog_layout.xml
+++ b/src/main/res/layout/dialog_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#55000000"
