--- a/src/main/res/layout/fragment_add_card_details.xml
+++ b/src/main/res/layout/fragment_add_card_details.xml
@@ -1,6 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
