--- a/src/main/res/layout/fragment_card_detail.xml
+++ b/src/main/res/layout/fragment_card_detail.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     android:id="@+id/root_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
