--- a/src/main/res/layout/fragment_instruction_permata.xml
+++ b/src/main/res/layout/fragment_instruction_permata.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
