--- a/src/main/res/layout/fragment_payment_transaction_status.xml
+++ b/src/main/res/layout/fragment_payment_transaction_status.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
                 android:layout_width="match_parent"
                 android:background="@android:color/white"
                 android:layout_height="match_parent">
 
     <android.support.v4.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
