--- a/src/main/res/layout/fragment_user_address.xml
+++ b/src/main/res/layout/fragment_user_address.xml
@@ -25,7 +25,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/billing_address_view"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                xmlns:card_view="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="4dp">
@@ -119,7 +119,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/shipping_address_view"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                xmlns:card_view="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/billing_address_view"
