--- a/src/main/res/layout/layout_material_progress.xml
+++ b/src/main/res/layout/layout_material_progress.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:wheel="http://schemas.android.com/apk/res-auto"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:wheel="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
+                xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
     <RelativeLayout
