--- a/src/main/res/layout/layout_tool_bar_titles.xml
+++ b/src/main/res/layout/layout_tool_bar_titles.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/lib/id.co.veritrans.sdk"
     android:orientation="vertical"
     >
 
